[UIREDUX-2460] Fix control label alignment for display creative asset form.

--- a/adcolony/less/adcolony-display.less
+++ b/adcolony/less/adcolony-display.less
@@ -28,6 +28,10 @@
 }
 
 .display-creative-asset-form {
+  .control-label {
+    text-align: left;
+  }
+
   .display-creative-url {
     width: 100%;
   }
